--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-API_TOKEN=''
-API_URL='https://api.themoviedb.org/3'
+VITE_API_TOKEN=''
+VITE_API_URL='https://api.themoviedb.org/3'
+VITE_API_IMAGE_URL='https://image.tmdb.org/t/p'
