--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
     "swr": "^1.3.0"
