--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# Controls when the workflow will run
 on: push
 
 jobs:
@@ -7,5 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: build app
-        run: sh ./deploy.sh
-        shell: sh
+        run: |
+          npm install
+          npm run build
+          cd dist
+          git init
+          git checkout -b main
+          git add .
+          git commit -m 'deploy'
+          git push -f https://github.com/Mist3rBru/cineapp.git main:gh-pages
