--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - name: build app
         run: |
+          git clone https://github.com/Mist3rBru/cineapp.git
+          cd cineapp
+          npm install
           npm run build
           cd dist
           git init
