--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
           npm run build
           cd dist
           git init
+          git config user.name bruno_bot
+          git config user.email mister.rocha1234@gmail.com
           git checkout -b main
           git add .
           git commit -m 'deploy'
