--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: run pipeline
         run: |
-          git clone https://github.com/Mist3rBru/cineapp.git
+          git clone git@github.com:Mist3rBru/cineapp.git
           cd cineapp
           npm install
           npm run build
@@ -18,4 +18,4 @@ jobs:
           git checkout -b gh-page
           git add .
           git commit -m 'deploy'
-          git push -f https://github.com/Mist3rBru/cineapp.git gh-page
+          git push -f git@github.com:Mist3rBru/cineapp.git gh-page
