--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
           git config user.name Mist3rBru
           git config user.email brunorocha2674@gmail.com
           git checkout -b gh-page
+          git pull origin gh-page
+          git checkout --ours .
           git add .
           git commit -m 'deploy'
           git push origin gh-page
