feat: next home page

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-VITE_API_KEY=''
-VITE_API_TOKEN=''
-VITE_API_URL='https://api.themoviedb.org/3'
-VITE_API_IMAGE_URL='https://image.tmdb.org/t/p'
-VITE_BASE_URI='/<REPO>/'
+NEXT_PUBLIC_API_KEY=''
+NEXT_PUBLIC_API_TOKEN=''
+NEXT_PUBLIC_API_URL='https://api.themoviedb.org/3'
+NEXT_PUBLIC_API_IMAGE_URL='https://image.tmdb.org/t/p'
+NEXT_PUBLIC_BASE_URI='/<REPO>/'
