--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "tsc --noEmit && eslint --fix . && prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "next": "^13.4.3",
     "react": "^18.2.0",
