--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,29 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "moduleDetection": "force",
     "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
+    "noEmit": true,
+
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
+    "useUnknownInCatchVariables": false,
+    "allowJs": false,
+    "skipLibCheck": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "src",
+    "useDefineForClassFields": true,
+    "allowSyntheticDefaultImports": true,
+
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
-    }
+      "@/tests/*": ["__tests__/*"],
+      "@/*": ["src/*"],
+    },
+
+    "jsx": "react-jsx",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
