--- a/package.json
+++ b/package.json
@@ -13,29 +13,31 @@
     "lint:eslint": "eslint --fix \"src/**/*.ts{x,}\""
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-player": "^2.14.1",
-    "react-router-dom": "^6.21.3",
+    "react-player": "^2.15.1",
+    "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/node": "^20.12.5",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-mist3rbru": "^0.2.0",
-    "npm-run-all2": "^6.1.1",
-    "postcss": "^8.4.33",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-mist3rbru": "^0.5.1",
+    "npm-run-all2": "^6.1.2",
+    "postcss": "^8.4.38",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.4",
+    "vite": "^5.2.8"
   }
 }
