--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,11 @@
     "baseUrl": ".",
     "paths": {
       "@/tests/*": ["__tests__/*"],
-      "@/*": ["src/*"],
+      "@/*": ["src/*"]
     },
 
     "jsx": "react-jsx",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"]
   },
-  "references": [{ "path": "./tsconfig.node.json" }],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
