--- a/.prettierrc
+++ b/.prettierrc
@@ -12,15 +12,7 @@
     "@trivago/prettier-plugin-sort-imports",
     "prettier-plugin-tailwindcss"
   ],
-  "importOrder": [
-    "^@/?test",
-    "^@/domain",
-    "^@/presentation",
-    "^@/main",
-    "^node",
-    "<THIRD_PARTY_MODULES>",
-    "^[./]"
-  ],
+  "importOrder": ["^@/", "^node", "<THIRD_PARTY_MODULES>", "^[./]"],
   "importOrderSeparation": false,
   "importOrderSortSpecifiers": true
 }
