--- a/package.json
+++ b/package.json
@@ -13,31 +13,30 @@
     "lint:eslint": "eslint --fix \"src/**/*.ts{x,}\""
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "clsx": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-player": "^2.15.1",
-    "react-router-dom": "^6.22.3",
-    "react-select": "^5.8.0",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.2.2"
+    "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-player": "^2.16.0",
+    "react-router": "^7.6.0",
+    "react-select": "^5.10.1",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20.12.5",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.24",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-mist3rbru": "^0.5.1",
-    "npm-run-all2": "^6.1.2",
-    "postcss": "^8.4.38",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.4",
-    "vite": "^5.2.8"
+    "@tailwindcss/vite": "^4.1.7",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^4.5.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-mist3rbru": "^0.6.4",
+    "npm-run-all2": "^8.0.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   }
 }
